Fix background color on mobile dark mode

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 @media screen and (prefers-color-scheme: dark) {
-    body {
+    html, body {
         background-color: #121212;
     }
 }
